--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2>Tech Stack</h2>
         <div class="skills-container">
             <div class="skill-item">HTML5 & CSS3</div>
-            <div class="skill-item">JavaScript div>
+            <div class="skill-item">JavaScript </div>
             <div class="skill-item">Python</div>
             <div class="skill-item">Java</div>
             <div class="skill-item">Git & GitHub</div>
